--- a/views/person/person.pug
+++ b/views/person/person.pug
@@ -1,40 +1,22 @@
 html
 head
    title Person
-   script(src="https://cdn.tailwindcss.com") 
+   script(src="https://cdn.tailwindcss.com")
+
    body
       div.container.mx-auto.py-4
          div.flex.justify-between
             h1.text-center.text-lg Person Crud
-            a.bg-blue-500.text-white.font-bold.py-2.px-4.rounded(href="/person/create") Create Person 
+            div 
+               input(type="text" name="search" id="search-data"  class='p-2 mr-2 outline-none border border-blue-500 rounded-xl' placeholder='Search ....' onInput="SeachData(this)")
+               a.bg-blue-500.text-white.font-bold.py-2.px-4.rounded(href="/person/create") Create Person 
          div.flex.flex-col
             if(messages.success)
                h3(style = "color:green") #{messages.success}
             div.overflow-x-auto(class='sm:-mx-6 lg:-mx-8')
                div.inline-block.min-w-full.py-2(class='sm:px-6 lg:px-8')
-                  div.overflow-hidden
-                     table.min-w-full.border.text-center.text-sm.font-light(class='dark:border-neutral-500')
-                        thead.border-b.font-medium(class='dark:border-neutral-500')
-                           tr
-                           th.border-r.px-6.py-4(scope='col' class='dark:border-neutral-500')
-                              | #
-                           th.border-r.px-6.py-4(scope='col' class='dark:border-neutral-500')
-                              | Name
-                           th.border-r.px-6.py-4(scope='col' class='dark:border-neutral-500')
-                              | Age
-                           th.border-r.px-6.py-4(scope='col' class='dark:border-neutral-500') Nationality
-                           th.px-6.py-4(scope='col' class='dark:border-neutral-500') Action
-                        tbody
-                           each val, key in person
-                              tr.border-b(class='dark:border-neutral-500')
-                              td.whitespace-nowrap.border-r.px-6.py-4.font-medium(class='dark:border-neutral-500')
-                                 | #{key + 1}
-                              td.whitespace-nowrap.border-r.px-6.py-4(class='dark:border-neutral-500')
-                                 | #{val.name}
-                              td.whitespace-nowrap.border-r.px-6.py-4(class='dark:border-neutral-500')
-                                 | #{val.age}
-                              td.whitespace-nowrap.border-r.px-6.py-4(class='dark:border-neutral-500')
-                                 | #{val.nationality}
-                              td.whitespace-nowrap.border-r.px-6.py-4(class='dark:border-neutral-500')
-                                 a.bg-blue-500.text-white.font-bold.py-2.px-4.rounded(href=`/person/edit/${val.id}`) Edit
-                                 a.ml-2.bg-red-500.text-white.font-bold.py-2.px-4.rounded(href=`/person/delete/${val.id}`) Delete
+                  div.overflow-hidden#person-data
+                     include ./person-data.pug
+
+      script(src="/js/script.js") 
+        
